--- a/Sigorta Şablon R/style/app.css
+++ b/Sigorta Şablon R/style/app.css
@@ -51,8 +51,6 @@ nav .container-1 {
     max-width: 1180px;
     padding: 20px 0;
     align-items: center;
-    position: relative;
-    z-index: 100;
 }
 
 nav .nav-header {
@@ -127,10 +125,9 @@ nav .container-1 .container-2 i:last-child {
 /* Menu */
 
 nav .menu {
-    display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 30px;
-    height: 30px;
     cursor: pointer;
     display: none;
 }
@@ -143,30 +140,52 @@ nav .menu .lines {
 
 nav .menu-container {
     display: none;
-    justify-content: center;
     flex-direction: column;
-    align-items: center;
     width: 100%;
-    background-color: rgba(61, 61, 61);
-    padding: 30px 0;
-
+    position: absolute;
     z-index: 10;
+    height: 100vh;
+    background-color: rgb(190, 0, 159);
+    padding-bottom: 30px;
 }
 
 nav .menu-container a, nav .menu-container span {
     text-decoration: none;
     color: white;
-    font-size: 13px;
+    font-size: 15px;
+    font-weight: 500;
+    width: 100%;
+    padding: 20px 0;
+    padding-left: 10%;
+    border-top: 1px solid rgb(71, 70, 70);
+    cursor: pointer;
 }
 
-nav .menu-container a:not(:last-child), nav .menu-container span {
-    margin-bottom: 10px;
+nav.menuOpened {
+    max-width: unset;
+    width: 100%;
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    background-color: rgb(190, 0, 159);
+}
+
+nav .container-1.menuOpened {
+    max-width: 80%;
+    padding: 20px 0;
+}
+
+nav .menu-container.menuOpened {
+    display: flex;
 }
 
 nav .menu-container .dropdown-1 .dropdown-container {
     display: none;
     flex-direction: column;
-    margin-left: 50px;
+}
+
+nav .menu-container .dropdown-1 .dropdown-container a {
+    border: none;
 }
 
 
@@ -176,6 +195,7 @@ nav .container-1 .dropdown-1 .dropdown-container {
     display: none;
     flex-direction: column;
     position: absolute;
+    height: auto;
 }
 
 nav .container-1 .dropdown-1:hover .dropdown-container {
@@ -209,7 +229,7 @@ nav .container-1 .dropdown-1:hover .dropdown-container {
     }
 
     nav .container-1 .menu {
-        display: block;
+        display: flex;
     }
 
 }
@@ -1019,7 +1039,7 @@ nav .container-1 .dropdown-1:hover .dropdown-container {
     }
 
     .Sigorta-Şirketleri .main-container .containers .container-item img {
-
+        
         width: 80%;
 
     }
