--- a/Sigorta Şablon R/style/iletisim.css
+++ b/Sigorta Şablon R/style/iletisim.css
@@ -270,7 +270,7 @@ nav .menu-container .dropdown-1 .dropdown-container a {
 }
 
 .form-box {
-    height: 610px;
+    min-height: 610px;
     background-color: white;
     border-radius: 20px;
     box-shadow: 0 3px 40px rgba(171, 170, 171, .2);
@@ -313,6 +313,7 @@ nav .menu-container .dropdown-1 .dropdown-container a {
 }
 
 .form-box form input {
+    width: 100%;
     height: 50px;
     padding: 0 20px;
     background-color: rgba(171, 170, 171, .1);
@@ -324,6 +325,7 @@ nav .menu-container .dropdown-1 .dropdown-container a {
 }
 
 .form-box form textarea {
+    width: 100%;
     height: 155px;
     padding: 20px 20px;
     background-color: rgba(171, 170, 171, .1);
@@ -353,9 +355,25 @@ nav .menu-container .dropdown-1 .dropdown-container a {
     letter-spacing: 2px;
 }
 
-.form-box form textarea, .form-box form button {
+.form-box form .mesaj-box, .form-box form button {
     grid-column: 1 /span 2;
 }
+
+
+.form-box form .hata {
+    display: none;
+    color: red;
+    font-size: 12px;
+}
+
+.form-box form .hata.show {
+    display: inline;
+}
+
+.form-box form input.hasError, .form-box form textarea.hasError {
+    border: 1px solid red;
+}
+
 
 @media (max-width:1150px) {
 
@@ -391,7 +409,7 @@ nav .menu-container .dropdown-1 .dropdown-container a {
         grid-template-columns: 100%;
     }
 
-    .form-box form textarea, .form-box form button {
+    .form-box form .mesaj-box, .form-box form button {
         grid-column: unset;
     }
 
