--- a/Kullanıcı Giriş & Kayit Ödev/main.css
+++ b/Kullanıcı Giriş & Kayit Ödev/main.css
@@ -9,6 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    gap: 20px 0;
 }
 
 form {
@@ -28,7 +29,7 @@ form input {
     padding: 0 15px;
 }
 
-form button {
+button {
     height: 40px;
     border-radius: 30px;
     background-color: rgb(0, 31, 167);
